# renamer-tui

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  event.rs  main.rs  scanner.rs  ui.rs
