[package]
name = "renamer-tui"
version = "0.1.2"
description = "A terminal UI for batch-renaming video series files"
authors = ["Dantescur <daniel@thedaniweb.eu.org>"]
license = "MIT"
edition = "2024"
keywords = ["tui", "rename", "video", "series", "ratatui"]
categories = ["command-line-utilities"]

[dependencies]
futures = "0.3.31"
ratatui = { version = "0.30.0", features = ["crossterm"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
tokio = { version = "1.50.0", features = ["full"] }
color-eyre = "0.6.3"
rfd = "0.17.2"
tui-input = "0.15.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
